--- a/modules/contacts/views/contacts.html
+++ b/modules/contacts/views/contacts.html
@@ -1,8 +1,8 @@
-
 <style>
     h1 {
         text-align: center;
     }
+
     div#welcome {
         height: 100vh;
         background: black;
@@ -13,25 +13,26 @@
         position: relative;
         top: 5px;
         height: 20px;
-        padding-right:2px;
-        padding-left:2px;
+        padding-right: 2px;
+        padding-left: 2px;
         padding-top: 2px;
         padding-bottom: 2px;
-        font:normal 35px arial;
-        color:white;
+        font: normal 35px arial;
+        color: white;
         font-weight: 500;
     }
+
     .personname {
         left: 0px;
         position: relative;
         top: 2px;
         height: 20px;
-        padding-right:2px;
-        padding-left:2px;
+        padding-right: 2px;
+        padding-left: 2px;
         padding-top: 2px;
         padding-bottom: 2px;
-        font:normal 20px arial;
-        color:white;
+        font: normal 20px arial;
+        color: white;
         font-weight: 500;
     }
 
@@ -40,32 +41,30 @@
         position: absolute;
         top: 3px;
         height: 18px;
-        background:red;
-        padding-right:1px;
-        padding-left:1px;
+        background: red;
+        padding-right: 1px;
+        padding-left: 1px;
         padding-top: 1px;
         padding-bottom: 1px;
-        border:solid 1px #9daccc;
-        font:normal 12px arial;
-        color:white;
+        border: solid 1px #9daccc;
+        font: normal 12px arial;
+        color: white;
         font-weight: 700;
     }
-
 
     .timercount {
         right: 9px;
         position: absolute;
         top: 3px;
         height: 18px;
-        padding-right:1px;
-        padding-left:1px;
+        padding-right: 1px;
+        padding-left: 1px;
         padding-top: 1px;
         padding-bottom: 1px;
-        font:normal 12px arial;
-        color:#000000;
+        font: normal 12px arial;
+        color: #000000;
         font-weight: 700;
     }
-
 
     .buttondemoBasicUsage section {
         background: #f7f7f7;
@@ -73,114 +72,133 @@
         text-align: center;
         margin: 1em;
         position: relative !important;
-        padding-bottom: 10px; }
+        padding-bottom: 10px;
+    }
+
     .buttondemoBasicUsage md-content {
-        margin-right: 7px; }
+        margin-right: 7px;
+    }
+
     .buttondemoBasicUsage section .md-button {
         margin-top: 16px;
-        margin-bottom: 16px; }
+        margin-bottom: 16px;
+    }
+
     .buttondemoBasicUsage .label {
         position: absolute;
         bottom: 5px;
         left: 7px;
         font-size: 14px;
-        opacity: 0.54; }
+        opacity: 0.54;
+    }
 
 </style>
-
-
-
-
-
 
 
 <div style="display: {{viewcontact}}">
 
     <div layout="column" tabIndex="-1" role="main" flex>
-    <md-toolbar class="md-whiteframe-glow-z2">
-        <div class="md-toolbar-tools">
-            <ng-md-icon icon="reorder" style="fill: white" ng-click="getLocation()" aria-label="Search"></ng-md-icon>
-            <h1>Goblob V 15.07.11</h1>
+        <md-toolbar class="md-whiteframe-glow-z2">
+            <div class="md-toolbar-tools">
+                <ng-md-icon icon="reorder" style="fill: white" ng-click="getLocation()"
+                            aria-label="Search"></ng-md-icon>
+                <h1>Goblob V 15.07.17</h1>
 
-            <span flex></span>
+                <span flex></span>
 
-            <ng-md-icon icon="search" style="fill: white" ng-click="getLocation()" aria-label="Search"></ng-md-icon>
-            <ng-md-icon icon="settings" style="fill: white" ng-click="getLocation()" aria-label="Search"></ng-md-icon>
-        </div>
-    </md-toolbar>
-</div>
+                <ng-md-icon icon="search" style="fill: white" ng-click="getLocation()" aria-label="Search"></ng-md-icon>
+                <ng-md-icon icon="settings" style="fill: white" ng-click="getLocation()"
+                            aria-label="Search"></ng-md-icon>
+            </div>
+        </md-toolbar>
+    </div>
 
-<nav mfb-menu template-url="ng-mfb-menu-md.tpl.html" position="br" effect="slidein" label="State" active-icon="img/icons/android-close.svg" resting-icon="img/icons/android-settings.svg" toggling-method="click">
-    <mfb-button template-url="ng-mfb-button-md.tpl.html" icon="img/icons/android-chat.svg" label="Chat"></mfb-button>
-    <mfb-button template-url="ng-mfb-button-md.tpl.html" icon="img/icons/android-call.svg" label="Phone Calls"></mfb-button>
-    <mfb-button template-url="ng-mfb-button-md.tpl.html" icon="img/icons/videocamera.svg" label="Video Conference"></mfb-button>
-    <mfb-button template-url="ng-mfb-button-md.tpl.html" icon="img/icons/android-chat.svg" label="Geolocation"></mfb-button>
-</nav>
-<!-- Tabs -->
-<div>
-    <md-content>
-        <md-tabs md-dynamic-height md-border-bottom md-selected="data.selectedIndex" md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}">
-            <md-tab id="tab1">
-                <md-tab-label>Contacts</md-tab-label>
-                <md-tab-body>
+    <nav mfb-menu template-url="ng-mfb-menu-md.tpl.html" position="br" effect="slidein" label="State"
+         active-icon="img/icons/android-close.svg" resting-icon="img/icons/android-settings.svg"
+         toggling-method="click">
+        <mfb-button template-url="ng-mfb-button-md.tpl.html" icon="img/icons/android-chat.svg"
+                    label="Chat"></mfb-button>
+        <mfb-button template-url="ng-mfb-button-md.tpl.html" icon="img/icons/android-call.svg"
+                    label="Phone Calls"></mfb-button>
+        <mfb-button template-url="ng-mfb-button-md.tpl.html" icon="img/icons/videocamera.svg"
+                    label="Video Conference"></mfb-button>
+        <mfb-button template-url="ng-mfb-button-md.tpl.html" icon="img/icons/android-chat.svg"
+                    label="Geolocation"></mfb-button>
+    </nav>
+    <!-- Tabs -->
+    <div>
+        <md-content>
+            <md-tabs md-dynamic-height md-border-bottom md-selected="data.selectedIndex"
+                     md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}">
+                <md-tab id="tab1">
+                    <md-tab-label>Contacts</md-tab-label>
+                    <md-tab-body>
 
-                    <md-list-item ng-repeat="person in people">
-                        <div class="avatar red" alt="{{ person.name }}" style="background-image: url({{ person.img }})">
-                            <div class="status {{person.profile_status}}"></div>
+                        <md-list-item ng-repeat="person in people">
+                            <div class="avatar red" alt="{{ person.name }}"
+                                 style="background-image: url({{ person.img }})">
+                                <div class="status {{person.profile_status}}"></div>
+                            </div>
+
+                            <p>{{ person.name }}</p>
+
+                            <div>
+                                <md-button class="md-icon-button md-accent" aria-label="Open Chat"
+                                           ng-click="openChat($event, person)">
+                                    <span class="notification-count" style="display:{{person.newMessage}}">{{person.notification_count}}</span>
+                                    <ng-md-icon icon="chat" style="fill: lightgreen"
+                                                aria-label="Open Chat"></ng-md-icon>
+                                </md-button>
+
+                                <ng-md-icon icon="call" style="fill: lightgreen" ng-click="call($event, person)"
+                                            aria-label="Audio Call"></ng-md-icon>
+                                <ng-md-icon icon="videocam" style="fill: lightgreen"
+                                            ng-click="videoCall($event, person)" aria-label="Video Call"></ng-md-icon>
+                                <ng-md-icon icon="location_off" style="fill: red" ng-click="getLocation()"
+                                            aria-label="Get My Location"></ng-md-icon>
+                            </div>
+                        </md-list-item>
+
+                    </md-tab-body>
+                </md-tab>
+
+                <md-tab id="tab2" ng-disabled="data.secondLocked">
+                    <md-tab-label>{{data.secondLabel}}</md-tab-label>
+                    <md-tab-body>
+                        <div class="card">
+                            <div class="item item-divider">
+                                Get My Current Location
+                            </div>
+                            <div class="item">
+                                <strong>Longitude </strong> &nbsp {{position.coords.longitude}}
+                            </div>
+                            <div class="item">
+
+                                <strong>Latitude </strong> &nbsp {{position.coords.latitude}}
+                            </div>
+                            <div class="item" ng-show="errorMsg">
+                                <p>{{errorMsg}}</p>
+                            </div>
                         </div>
 
-                        <p>{{ person.name }}</p>
-                        <div>
-                            <md-button class="md-icon-button md-accent" aria-label="Open Chat" ng-click="openChat($event, person)">
-                                <span class="notification-count" style="display:{{person.newMessage}}">{{person.notification_count}}</span>
-                                <ng-md-icon icon="chat" style="fill: lightgreen" aria-label="Open Chat"></ng-md-icon>
-                            </md-button>
-
-                            <ng-md-icon icon="call" style="fill: lightgreen" ng-click="call($event, person)" aria-label="Audio Call"></ng-md-icon>
-                            <ng-md-icon icon="videocam" style="fill: lightgreen" ng-click="videoCall($event, person)" aria-label="Video Call"></ng-md-icon>
-                            <ng-md-icon icon="location_off" style="fill: red" ng-click="getLocation()" aria-label="Get My Location"></ng-md-icon>
+                        <div class="padding">
+                            <ng-md-icon icon="location_on" style="fill: lightgreen" ng-click="getLocation()"
+                                        aria-label="Get My Location"></ng-md-icon>
                         </div>
-                    </md-list-item>
 
-                </md-tab-body>
-            </md-tab>
+                        <md-input-container md-no-float>
+                            <md-icon md-svg-src="img/icons/phone325.svg"></md-icon>
+                            <input ng-model="phone" type="text">
+                        </md-input-container>
+                        <md-button ng-click="postPhoneNumber()" class="md-raised md-primary">Primary</md-button>
 
-            <md-tab id="tab2" ng-disabled="data.secondLocked">
-                <md-tab-label>{{data.secondLabel}}</md-tab-label>
-                <md-tab-body>
-                    <div class="card">
-                        <div class="item item-divider">
-                            Get My Current Location
-                        </div>
-                        <div class="item">
-                            <strong>Longitude </strong> &nbsp {{position.coords.longitude}}
-                        </div>
-                        <div class="item">
+                        <md-button ng-click="prueba()" class="md-raised md-primary">Prueba</md-button>
 
-                            <strong>Latitude </strong> &nbsp {{position.coords.latitude}}
-                        </div>
-                        <div class="item" ng-show="errorMsg">
-                            <p>{{errorMsg}}</p>
-                        </div>
-                    </div>
-
-                    <div class="padding">
-                        <ng-md-icon icon="location_on" style="fill: lightgreen" ng-click="getLocation()" aria-label="Get My Location"></ng-md-icon>
-                    </div>
-
-                    <md-input-container md-no-float>
-                        <md-icon md-svg-src="img/icons/phone325.svg"></md-icon>
-                        <input ng-model="phone" type="text">
-                    </md-input-container>
-                    <md-button ng-click="postPhoneNumber()" class="md-raised md-primary">Primary</md-button>
-
-                    <md-button ng-click="prueba()" class="md-raised md-primary">Prueba</md-button>
-
-                    <a ui-sref="register">State 1</a>
-                </md-tab-body>
-            </md-tab>
-        </md-tabs>
-    </md-content>
-</div>
+                        <a ui-sref="register">State 1</a>
+                    </md-tab-body>
+                </md-tab>
+            </md-tabs>
+        </md-content>
+    </div>
 
 </div>
