--- a/css/app.css
+++ b/css/app.css
@@ -6,6 +6,12 @@ html, body {
   padding: 0px;
 }
 
+#map{
+    width: 100%;
+    height: 80%;
+}
+
+
 .toolbardemoBasicUsage md-toolbar md-icon.md-default-theme {
   color: white; }
 
